--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch ./src/*.test.js"
+    "watch": "jest --watch ./test/*.js"
   },
   "author": "alexfuro",
   "license": "ISC",
