--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.16.0",
     "jest": "^23.6.0",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {
+    "npm": "^6.7.0"
   }
 }
